--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
+    "formik": "^2.4.6",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "15.1.3",
     "node": "^20.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
