--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "next": "15.1.3",
@@ -24,9 +25,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cookies-next": "^5.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
