--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "cookie": "^1.0.2",
+    "cookieconsent": "^3.1.1",
     "express": "^4.21.2",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
@@ -19,6 +21,7 @@
     "next": "15.1.3",
     "node": "^20.9.0",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "reactstrap": "^9.2.3",
     "yup": "^1.6.1"
