--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "^4.0.5",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
@@ -20,6 +21,7 @@
     "mongoose": "^8.9.5",
     "next": "15.1.3",
     "node": "^20.9.0",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
