--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie": "^1.0.2",
     "cookieconsent": "^3.1.1",
     "express": "^4.21.2",
+    "formidable": "^3.5.2",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
